--- a/i18n/messages/fr.json
+++ b/i18n/messages/fr.json
@@ -1,10 +1,10 @@
 {
   "Hero": {
-    "heading": "Frank V",
-    "tagline": "Développeur Web",
-    "text1": "Specialiste React et Next.js, je développe des sites web depuis 3 ans.",
-    "text2": "Je développe  des projets personnels afin d'élargir mes compétences. ",
-    "text3": "Donnons vie à vos projets ensemble."
+    "title": "Frank V",
+    "subtitle": "Développeur Web",
+    "text1": "Specialiste React et Next.js, je développe des sites web depuis plus de 3 ans.",
+    "text2": "Je m'investis dans des projets personnels afin d'enrichir mes compétences.",
+    "text3": "Concrétisons vos idées ensemble."
   },
   "About": {
     "title": "Accueil",
