--- a/i18n/messages/fr.json
+++ b/i18n/messages/fr.json
@@ -1,29 +1,106 @@
 {
+  "Sidebar": {
+    "about": "Auteur",
+    "projects": "Projets"
+  },
   "Hero": {
     "title": "Frank V",
-    "subtitle": "Développeur Web",
-    "text1": "Specialiste React et Next.js, je développe des sites web depuis plus de 3 ans.",
-    "text2": "Je m'investis dans des projets personnels afin d'enrichir mes compétences.",
-    "text3": "Concrétisons vos idées ensemble."
+    "tagline": "Développeur Web",
+    "p1": "Specialiste React et Next.js, je développe des sites web depuis plus de 3 ans.",
+    "p2": "Je m'investis dans des projets personnels afin d'enrichir mes compétences.",
+    "p3": "Concrétisons vos idées ensemble."
   },
   "About": {
-    "title": "Accueil",
-    "content": "Bonjour et bienvenue sur mon site !"
+    "section": "Auteur",
+    "p1": "Bonjour ! Je suis Frank, un développeur web bilingue en français et en anglais. Je me spécialise dans la création de sites web attrayants et réactifs adaptés aux besoins des particuliers et des petites entreprises.",
+    "p2": "Passionné par la réalisation de designs conviviaux et réactifs et par l&apos;optimisation des performances des sites, je propose également des services de SEO/Copywriting afin d'améliorer votre visibilité.",
+    "p3": "Je suis spécialisé dans les frameworks frontend React et Next.js. Je travaille également avec des technologies backend telles que Node.js, PostgreSQL et MongoDB, ce qui me permet de construire des applications full-stack. Les outils d'IA tels que ChatGPT, Git Copilot et Midjourney font également partie de mon flux de travail.",
+    "p4": "Je consacre du temps à améliorer mes soft skills en termes d'autonomie, communication, adaptabilité, et d'organisation. Hors travail, je suis aussi passionné par la musique et le cinéma.",
+    "p5": "Toujours à la recherche de nouveaux défis et d'opportunités pour apprendre et évoluer en tant que développeur, si vous êtes intéressé par une collaboration, n'hésitez pas à me contacter !"
   },
   "Projects": {
-    "title": "Accueil",
-    "content": "Bonjour et bienvenue sur mon site !"
+    "section": "Projets",
+    "gallery": "Voir la Galerie",
+
+    "desc1": "Un clone du site web de l'iPhone 15 Pro d'Apple utilisant React.js et TailwindCSS. Animations et éléments en 3D via l'utilisation de Three.js et GSAP.",
+    "modal1": "Il s'agit d'un clone du site web de l'iPhone 15 Pro d'Apple utilisant React.js et TailwindCSS. Il met en avant l'utilisation efficace de GSAP (Greensock Animations) et de Three.js pour afficher les modèles de l'iPhone 15 Pro dans différentes couleurs et formes.",
+
+    "desc2": "Plateforme de gestion d'événements construite avec Next.js. Cette application permet de publier des événements et inclue un paiement sécurisé.",
+    "modal2": "Evently est une plateforme de gestion d'événements construite sur Next.js. Elle sert de hub pour présenter des événements, propose des paiements sécurisés via Stripe, et permet d'acheter des billets ainsi que de gérer vos propres événements.",
+
+    "desc3": "Page d'accueil pour une agence de voyage avec une esthétique moderne et minimaliste, réalisée en HTML, CSS et JavaScript.",
+    "modal3": "Page d'accueil pour une agence de voyage avec une esthétique moderne et minimaliste, réalisée en HTML, CSS et JavaScript. Améliorée avec des animations fluides grâce à la bibliothèque ScrollReveal.js.",
+
+    "desc4": "Page d'accueil pour un restaurant de sushis avec une esthétique moderne et minimaliste, réalisée en HTML, CSS et JavaScript.",
+    "modal4": "Page d'accueil pour un restaurant de sushis avec une esthétique moderne et minimaliste, réalisée en HTML, CSS et JavaScript. Améliorée avec des animations fluides grâce à la bibliothèque ScrollReveal.js.",
+
+    "desc5": "Plateforme d'images AI avec traitement avancé : restauration, recoloration, suppression d'objets, remplissage génératif et suppression de fond.",
+    "modal5": "Une plateforme SaaS d'images AI avec traitement avancé des images, paiements sécurisés et recherche puissante. Fonctionnalités : restauration, recoloration, suppression d'objets, remplissage génératif et suppression de fond.",
+
+    "desc6": "CarHub présente divers types de voitures, offrant des informations complètes avec des options de filtrage avancées et une pagination.",
+    "modal6": "CarHub présente divers types de voitures, offrant des informations complètes avec des options de filtrage avancées et une pagination. Construite avec Next.js et exploitant ses capacités de rendu côté serveur.",
+
+    "desc7": "Site web 3D alimenté par Three.js avec des éléments interactifs. Naviguez à bord d'un petit avion et explorez une île flottante.",
+    "modal7": "Ce site web 3D, construit avec React et alimenté par Three.js, propose des éléments interactifs captivants. Naviguez à bord d'un petit avion pour explorer une île flottante et découvrir diverses informations. Sur la page de contact, un renard réagira dynamiquement pendant que vous remplissez les champs !",
+
+    "desc8": "Plateforme AI permettant aux utilisateurs de créer des podcasts via la de conversion texte-en-audio, ainsi que la génération de thumbnail.",
+    "modal8": "Une plateforme SaaS AI de pointe permettant aux utilisateurs de créer, découvrir et profiter de podcasts avec des fonctionnalités avancées telles que la conversion texte-en-audio utilisant l'IA multi-voix alimentée par l'API OpenAI, la génération d'images pour les miniatures de podcasts, et une lecture fluide. La plateforme inclut une authentification sécurisée via Clerk, garantissant une expérience utilisateur sûre et personnalisée."
   },
   "Experience": {
-    "title": "Accueil",
-    "content": "Bonjour et bienvenue sur mon site !"
+    "section": "Experience",
+    "exp1": "Freelance",
+    "role1": "Développeur Web",
+    "date1": "Depuis 2022",
+    "loca1": "Remote",
+    "desc1": "Je développe des sites web personnalisés pour les particuliers et les petites entreprises, en offrant des designs responsives, conviviaux et sur mesure. Mes responsabilités incluent l'optimisation des performances du site, l'amélioration du référencement naturel (SEO) pour une meilleure visibilité sur les moteurs de recherche, ainsi que la création de contenus originaux et conformes aux droits d'auteur. De plus, je propose des services de design de logo et d’assistance sur les réseaux sociaux pour renforcer la présence de la marque et engager les clients dans différents secteurs."
   },
   "Certification": {
-    "title": "Accueil",
-    "content": "Bonjour et bienvenue sur mon site !"
+    "section": "Certification",
+    "certificate":"Certificat",
+    "certif1": "Développeur Web",
+    "school1": "OpenClassrooms",
+    "date1": "Novembre 2022 – 600 heures",
+    "desc1": "Axé sur le développement frontend, l'intégration d'APIs backend et la création d'APIs from scratch. Développement d'applications web responsives, amélioration de la dynamique des pages, optimisation des performances du site et gestion de projets de A à Z sous supervision et évaluation. Projet phare : Groupomania, une plateforme de médias sociaux full-stack construite avec la stack MERN.",
+
+    "certif2": "Responsive Web Design",
+    "school2": "freeCodeCamp",
+    "date2": "Janvier 2024 – 300 heures",
+    "desc2": "Axé sur la structuration du contenu avec HTML et les principes de design avec CSS. Développement des compétences en design responsif, Flexbox, CSS Grid, SEO et accessibilité à travers 20 projets. Mise en avant des techniques modernes et des meilleures pratiques pour concevoir des pages web bien structurées et accessibles. Projets clés : Groupomania, une plateforme de médias sociaux full-stack construite avec la stack MERN.",
+
+    "certif3": "JavaScript Algorithms & Data Structures",
+    "school3": "freeCodeCamp",
+    "date3": "Janvier 2024 – 300 heures",
+    "desc3": "Axé sur la maîtrise des fondamentaux de JavaScript, y compris les variables, tableaux, objets, boucles, fonctions et le DOM. Développement des compétences en Programmation Orientée Objet (POO), Programmation Fonctionnelle et réflexion algorithmique. Expérience acquise en travail avec le stockage local et récupération de données via des APIs. Accent mis sur les applications pratiques et les meilleures pratiques pour créer des applications web interactives et efficaces.",
+
+    "certif4": "Front End Development Libraries",
+    "school4": "freeCodeCamp",
+    "date4":  "Janvier 2024 – 300 heures",
+    "desc4": "Axé sur l'amélioration des compétences frontend avec des bibliothèques et frameworks populaires. Acquisition de compétences en stylisation rapide des sites web avec Bootstrap et extension des styles CSS avec Sass. Expertise développée dans la création d'Applications à Page Unique (SPA) avec React et Redux à travers des projets pratiques comme une application de panier d'achat. Mise en avant des techniques avancées de stylisation et de gestion d'état pour des applications web dynamiques et efficaces.",
+
+    "certif5": "Data Visualization",
+    "school5": "freeCodeCamp",
+    "date5":  "Janvier 2024 – 300 heures",
+    "desc5": "Axé sur la présentation des données à travers des graphiques, des cartes et des diagrammes en utilisant la bibliothèque D3.js. Acquisition de compétences en travail avec JSON (JavaScript Object Notation) et intégration des données depuis des sources en ligne via des APIs. Mise en avant des techniques pratiques pour visualiser et interpréter les données afin de fournir des insights clairs et pertinents.",
+
+    "certif6": "Relational Database",
+    "school6": "freeCodeCamp",
+    "date6":  "Janvier 2024 – 300 heures",
+    "desc6": "Axé sur l'utilisation des outils et logiciels essentiels pour développeurs, y compris VS Code, PostgreSQL et la ligne de commande Linux/Unix. Acquisition de compétences en commandes Bash de base, navigation dans le système de fichiers et scripting. Expertise développée dans la création et la gestion de bases de données relationnelles avec PostgreSQL et SQL. Apprentissage également de Git pour le contrôle de version, un outil crucial pour le développement collaboratif.",
+
+    "certif7": "Back End Development & APIs",
+    "school7": "freeCodeCamp",
+    "date7":  "Janvier 2024 – 300 heures",
+    "desc7": "Axé sur l'utilisation de JavaScript pour le développement côté serveur afin de créer des applications web complètes. Apprentissage de l'écriture d'applications backend avec Node.js et npm, et de la construction d'applications web avec le framework Express. Développement d'un microservice People Finder avec MongoDB et la bibliothèque Mongoose, en mettant l'accent sur l'architecture des microservices pour créer des applications modulaires et évolutives.",
+
+    "certif8": "Quality Assurance",
+    "school8": "freeCodeCamp",
+    "date8":  "Janvier 2024 – 300 heures",
+    "desc8": "Axé sur les tests et l'assurance qualité des applications complexes. Apprentissage de l'écriture de tests avec Chai pour vérifier que les applications fonctionnent comme prévu. Création d'une application de chat pour explorer des concepts avancés de Node.js et Express, en utilisant Pug comme moteur de templates, Passport pour l'authentification, et Socket.io pour la communication en temps réel entre le serveur et les clients."
   },
+
   "Contact": {
-    "title": "Accueil",
-    "content": "Bonjour et bienvenue sur mon site !"
+    "section": "Contact",
+    "p1": "Une idée à partager ? Envoyez-moi un e-mail pour en discuter ! Vous pouvez aussi me trouver sur ",
+    "p2": "selon votre préférence"
   }
 }
