--- a/i18n/messages/en.json
+++ b/i18n/messages/en.json
@@ -12,7 +12,7 @@
   },
   "About": {
     "section": "About",
-    "p1": "Hello there! Frank a web developer fluent in both French and English. I specialize in creating engaging and responsive websites that cater to individual and small business needs.",
+    "p1": "Hello there! Name's Frank, I'm a self-taught fullstack developer, fluent in both French and English. I specialize in creating engaging and responsive websites that cater to individual and small business needs.",
     "p2": "Passionate about delivering user-friendly responsive designs and optimizing site performance, I also provide SEO and copyrighting services to enhance online visibility and engagement.",
     "p3": "I'm specialized in React and Next.js frontend frameworks. I've also worked with backend technologies like Node.js, PostgreSQL and MongoDB, allowing me to build full-stack applications. AI tools such as ChatGPT, Git Copilot, and Midjourney are also part of my workflow.",
     "p4": "When I'm not coding, I dedicate time to improving my soft skills in autonomy, effective communication, adaptability, organization, and resourcefulness. I'm also very passionate about music and cinema.",
