--- a/i18n/messages/fr.json
+++ b/i18n/messages/fr.json
@@ -13,7 +13,7 @@
   "About": {
     "section": "Auteur",
     "p1": "Bonjour ! Je suis Frank, développeur web full-stack autodidacte. Je me spécialise dans la création de sites web attrayants et réactifs adaptés aux besoins des particuliers et des petites entreprises.",
-    "p2": "Passionné par la réalisation de designs conviviaux et réactifs et par l&apos;optimisation des performances des sites, je propose également des services de SEO/Copywriting afin d'améliorer votre visibilité.",
+    "p2": "Passionné par la réalisation de designs conviviaux et réactifs et par l'optimisation des performances des sites, je propose également des services de SEO/Copywriting afin d'améliorer votre visibilité.",
     "p3": "Je suis spécialisé dans les frameworks frontend React et Next.js. Je travaille également avec des technologies backend telles que Node.js, PostgreSQL et MongoDB, ce qui me permet de construire des applications full-stack. Les outils d'IA tels que ChatGPT, Git Copilot et Midjourney font également partie de mon flux de travail.",
     "p4": "Je consacre du temps à améliorer mes soft skills en termes d'autonomie, communication, adaptabilité, et d'organisation. Hors travail, je suis aussi passionné par la musique et le cinéma.",
     "p5": "Toujours à la recherche de nouveaux défis et d'opportunités pour apprendre et évoluer en tant que développeur, si vous êtes intéressé par une collaboration, n'hésitez pas à me contacter !"
