--- a/i18n/messages/en.json
+++ b/i18n/messages/en.json
@@ -65,7 +65,7 @@
     "certif2": "Responsive Web Design",
     "school2": "freeCodeCamp",
     "date2": "January 2024 – 300 hours",
-    "desc2": "Focused on content structuring with HTML and design principles with CSS. Developed skills in responsive design, Flexbox, CSS Grid, SEO, and accessibility through 20 projects. Emphasized modern techniques and best practices for crafting well-structured and accessible web pages. Key projects: Groupomania, a full-stack social media platform built with the MERN stack.",
+    "desc2": "Focused on content structuring with HTML and design principles with CSS. Developed skills in responsive design, Flexbox, CSS Grid, SEO, and accessibility through 20 projects. Emphasized modern techniques and best practices for crafting well-structured and accessible web pages.",
 
     "certif3": "JavaScript Algorithms & Data Structures",
     "school3": "freeCodeCamp",
