--- a/i18n/messages/fr.json
+++ b/i18n/messages/fr.json
@@ -65,7 +65,7 @@
     "certif2": "Responsive Web Design",
     "school2": "freeCodeCamp",
     "date2": "Janvier 2024 – 300 heures",
-    "desc2": "Parcours axé sur la structuration du contenu avec HTML et les principes de design avec CSS. Développement des compétences en design responsif, Flexbox, CSS Grid, SEO et accessibilité à travers 20 projets. Mise en avant des techniques modernes et des meilleures pratiques pour concevoir des pages web bien structurées et accessibles. Projets clés : Groupomania, une plateforme de médias sociaux full-stack construite avec la stack MERN.",
+    "desc2": "Parcours axé sur la structuration du contenu avec HTML et les principes de design avec CSS. Développement des compétences en design responsif, Flexbox, CSS Grid, SEO et accessibilité à travers 20 projets. Mise en avant des techniques modernes et des meilleures pratiques pour concevoir des pages web bien structurées et accessibles.",
 
     "certif3": "JavaScript Algorithms & Data Structures",
     "school3": "freeCodeCamp",
