--- a/i18n/messages/fr.json
+++ b/i18n/messages/fr.json
@@ -101,6 +101,6 @@
   "Contact": {
     "section": "Contact",
     "p1": "Une idée à partager ? Envoyez-moi un e-mail pour en discuter ! Vous pouvez aussi me trouver sur ",
-    "p2": "selon votre préférence"
+    "p2": "selon votre préférence."
   }
 }
