--- a/i18n/messages/en.json
+++ b/i18n/messages/en.json
@@ -101,6 +101,7 @@
   "Contact": {
     "section": "Contact",
     "p1": "Have an idea to discuss? Shoot me an email if you want to connect! You can also find me on",
-    "p2": "if that's more your speed."
+    "p2": "if that's more your speed.",
+    "p3": "Set up a meeting"
   }
 }
