--- a/i18n/messages/en.json
+++ b/i18n/messages/en.json
@@ -32,7 +32,7 @@
     "modal3": "Landing page design for a travel agency featuring a modern and minimalist aesthetic, crafted using HTML, CSS, and JavaScript. Enhanced with smooth animations powered by ScrollReveal.js library.",
 
     "desc4": "Landing page for a sushi restaurant featuring a modern and minimalist aesthetic, crafted using HTML, CSS, and JavaScript.",
-    "modal4": "Landing page design for a sushi restaurant featuring a modern and minimalist aesthetic, crafted using HTML, CSS, and JavaScript. Enhanced with smooth animations powered by ScrollReveal.js library",
+    "modal4": "Landing page design for a sushi restaurant featuring a modern and minimalist aesthetic, crafted using HTML, CSS, and JavaScript. Enhanced with smooth animations powered by ScrollReveal.js library.",
 
     "desc5": "AI image platform featuring advanced image processing: restoration, recoloring, object removal, generative filling, and background removal.",
     "modal5": "An AI image SaaS platform with advanced image processing, secure payments and powerful search. Features: restoration, recoloring, object removal, generative filling, and background removal.",
